--- a/scratch.html
+++ b/scratch.html
@@ -10,7 +10,7 @@
 <body>
     <div class="common header">BYU Marriott School of Buisness</div>
         <nav class="common">
-            <a href="../startbootstrap-clean-blog-gh-pages/resume.html">Home Page</a>
+            <a href="../https://samschoepf.github.io/is201/resume.html">Home Page</a>
         </nav>
     <div class="common main body">
         <h2>Qualifications</h2>
