--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
                                 <li>GPA 3.95 / 4.00</li>
                                 <li>ACT 34 / 36, 96th Percentile</li>
                                 <li>Full Academic Scholarship</li>
-                                <li>BYU Accointing Society</li>
+                                <li>BYU Accounting Society</li>
                                 <li>Honor Roll Student</li>
                     </div>
                     <br>
